[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemy/Crawler/Scripts/CrawlerMovement.gd" type="Script" id=1]
[ext_resource path="res://Enemy/Crawler/Assets/Rat.png" type="Texture" id=2]
[ext_resource path="res://Enemy/EnemyHitbox.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 1 )

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Spawn"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walk"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 2 )

[node name="Rat" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 1 )
SPEED = 32
GRAVITY = 4.0
MAX_HEALTH = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 2 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
anims/Idle = SubResource( 4 )
anims/Spawn = SubResource( 5 )
anims/Walk = SubResource( 6 )

[node name="HurtAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="WallRaycasts" type="Node2D" parent="."]
visible = false

[node name="Left" type="RayCast2D" parent="WallRaycasts"]
position = Vector2( -3, 0 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="Right" type="RayCast2D" parent="WallRaycasts"]
position = Vector2( 3, 0 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="EdgeRaycasts" type="Node2D" parent="."]
visible = false

[node name="Left" type="RayCast2D" parent="EdgeRaycasts"]
position = Vector2( -4, 1 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="Right" type="RayCast2D" parent="EdgeRaycasts"]
position = Vector2( 4, 1 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 32
script = ExtResource( 3 )
damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 3 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
